Update API_BASE URL to production server

--- a/index.html
+++ b/index.html
@@ -788,12 +788,9 @@ main {
 
 <script>
 /* -------------------------------------------------
-   HIER DEINE SERVER-URL EINTRAGEN,
-   WENN DER SERVER LIVE IST.
-   Beispiel:
-   const API_BASE = "https://dein-server.onrender.com";
+   HIER SERVER-URL: dein Backend ist online auf Render.
 ------------------------------------------------- */
-const API_BASE = "http://localhost:3000";
+const API_BASE = "https://butterflymusic-freunde-app-backend.onrender.com";
 
 let currentUser = null;
 
@@ -1175,3 +1172,4 @@ document.getElementById("editProfileBtn").addEventListener("click", () => {
 </script>
 </body>
 </html>
+
